# EdgeSense

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
skicoach/: __init__.py  cli.py  coaching_rules.py  config.py  cropping.py  metrics.py  overlay.py  pipeline.py  pose_provider.py  report_writer.py  smoothing.py  tracking.py  turn_detection.py  view_detection.py
tests/: test_metrics.py  test_turn_detection.py
