[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ski-coach-vision"
version = "0.1.0"
description = "Local-first video-based ski coaching using pose estimation and biomechanics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "imageio-ffmpeg>=0.5.1",
  "mediapipe>=0.10.10",
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "streamlit>=1.28.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.2.0"]

[project.scripts]
skicoach = "skicoach.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["skicoach*"]
